--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <h1>QUICK!! Make Morty move so he doesn't become a Rick!!!</h1>
   <body>
-    <img id='morty' src= "bomberman.jpg" alt="the slowest idiot that's actually really smart and brave">
+    <img id='morty' src= "bomberman.jpg" alt="image of a boy that's really smart and brave (morty)">
 
     <script src= "BomberMan.js" charset="utf-8"></script>
   </body>
